--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
         <div class="col-md-4">
           <div class="serviceContainer container-fluid">
             <h5 class="sectionNumber">2</h5>
-
             <h4>Data Management</h4>
             <p>Eighty percent of businesses affected by major data
               loss close within 18 months - don't let your company
@@ -146,99 +145,110 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="sectionNumber">3</div>
-
-          <h4>Proposal Tool</h4>
-          <p>We offer a proprietary sales proposal tool that has
-            been tested and proven in markets across the US. Our
-            tool is customized to your business when you sign up
-            and hosted on our website so you and your customers can
-            access it from anywhere.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">3</h5>
+            <h4>Proposal Tool</h4>
+            <p>We offer a proprietary sales proposal tool that has
+              been tested and proven in markets across the US. Our
+              tool is customized to your business when you sign up
+              and hosted on our website so you and your customers can
+              access it from anywhere.
+            </p>
+          </div>
         </div>
       </div>
       <!--services row two-->
       <div class="container-fluid row">
         <div class="col-md-4">
-          <div class="sectionNumber">4</div>
-
-          <h4>Training</h4>
-          <p>TMW offers comprehensive sales, operations, and management training.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">4</h5>
+            <h4>Training</h4>
+            <p>TMW offers comprehensive sales, operations, and management training.
+            </p>
+          </div>
         </div>
         <div class="col-md-4">
-          <div class="sectionNumber">5</div>
-
-          <h4>Photography</h4>
-          <p>We offer professional photography services for use on your website
-            or in marketing collateral.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">5</h5>
+            <h4>Photography</h4>
+            <p>We offer professional photography services for use on your website
+              or in marketing collateral.
+            </p>
+          </div>
         </div>
         <div class="col-md-4">
-          <div class="sectionNumber">6</div>
-
-          <h4>System Design</h4>
-          <p>We can handle overflow solar system design work for submission
-            to your local jurisdictions.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">6</h5>
+            <h4>System Design</h4>
+            <p>We can handle overflow solar system design work for submission
+              to your local jurisdictions.
+            </p>
+          </div>
         </div>
       </div>
       <!--services div row3-->
       <div class="container-fluid row">
-
         <div class="col-md-4">
-          <div class="sectionNumber">7</div>
-          <h4>International Partners</h4>
-          <p>We have relationships with leading solar panel manufacturers,
-            including SunPower and Bosch/Aleo, to allow you to bill all or
-            part of our services through market development funds.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">7</h5>
+            <h4>International Partners</h4>
+            <p>We have relationships with leading solar panel manufacturers,
+              including SunPower and Bosch/Aleo, to allow you to bill all or
+              part of our services through market development funds.
+            </p>
+          </div>
         </div>
         <div class="col-md-4">
-          <div class="sectionNumber">8</div>
-
-          <h4>Advertising and Marketing</h4>
-          <p>We offer support in planning, designing, and executing marketing
-            campaigns. TMW will help you make the most of every single marketing
-            dollar.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">8</h5>
+            <h4>Advertising and Marketing</h4>
+            <p>We offer support in planning, designing, and executing marketing
+              campaigns. TMW will help you make the most of every single marketing
+              dollar.
+            </p>
+          </div>
         </div>
         <div class="col-md-4">
-          <div class="sectionNumber">9</div>
-
-          <h4>Collateral</h4>
-          <p>Great design on your marketing and tradeshow collateral is
-            imperative. We work with you to maintain your previous brand
-            identity while designing convincing fliers, trifolds, or even
-            business cards.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">9</h5>
+            <h4>Collateral</h4>
+            <p>Great design on your marketing and tradeshow collateral is
+              imperative. We work with you to maintain your previous brand
+              identity while designing convincing fliers, trifolds, or even
+              business cards.
+            </p>
+          </div>
         </div>
       </div>
       <!--services div row4-->
       <div class="container-fluid row">
         <div class="col-md-4">
-          <div class="sectionNumber">10</div>
-
-          <h4>Financing</h4>
-          <p>Having a good financing or lease program is necessary in
-            today's market. We can work with our national partners to
-            help you offer your customers more options.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">10</h5>
+            <h4>Financing</h4>
+            <p>Having a good financing or lease program is necessary in
+              today's market. We can work with our national partners to
+              help you offer your customers more options.
+            </p>
+          </div>
         </div>
         <div class="col-md-4">
-          <div class="sectionNumber">11</div>
-
-          <h4>Websites</h4>
-          <p>Your website is the initial point of contact for many of your
-            customers, make sure they get a good first impression. We can
-            build you an entirely new website or work with you to bring your
-            current website up to date. We will make sure you are doing
-            everything you can to outrank your competitors on Google and
-            other search engines.
-          </p>
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">11</h5>
+            <h4>Websites</h4>
+            <p>Your website is the initial point of contact for many of your
+              customers, make sure they get a good first impression. We can
+              build you an entirely new website or work with you to bring your
+              current website up to date. We will make sure you are doing
+              everything you can to outrank your competitors on Google and
+              other search engines.
+            </p>
+          </div>
         </div>
-        <div class="col-md-4" id="bigButton">
-          Get in Touch Today
+        <div class="col-md-4" id="buttonContainer">
+          <div id="bigButton">
+            Get in Touch Today
+          </div>
       </div>
     </div>
     <div id="about" class="container-fluid">
