--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#main-container">
-                <img src="/tmw/images/logo.png" height="130" width="200"
+              <a class="navbar-brand" href="#">
+                <img src="/tmw/images/logo.png" height="120" width="170"
                   style="margin-top: -12px; margin-left: -14px;">
               </a>
             </div>
@@ -266,23 +266,57 @@
     <div id="clients" class="container-fluid">
       <h3>Clients</h3>
       <div class="container-fluid row">
-        <div class="col-md-12">
+        <div class="col-md-6 clientContainer alignLeft">
           <img src="/tmw/images/dwelltech.png" />
-          <p>Dwelltek</p>
+          <p>
+            <br />
+            We retained the good folks at Thousand Miles West to build a
+            solar proposal tool. The product they produced for us is truly
+            best in class. Here are some of the bullet points that come to
+            mind when
+            I think about our new tool:
+          </p>
+          <ul>
+            <li>Professional looking</li>
+            <li>Simple for homeowners to understand</li>
+            <li>Great sales tool</li>
+            <li>Flexible</li>
+            <li>Easy to run different system size/cost per watt/power
+              consumption scenarios
+            </li>
+            <li>Integrates with tax credit forms, contracts & net metering
+              agreements
+            </li>
+            <li>Easy to integrate different mounting types, module and
+              inverter types
+            </li>
+          </ul>
+          <p>
+            In a nutshell, this tool helps differentiate us from our
+            competition and
+            is a powerful selling tool.
+            We love the tool and enjoyed working with the Thousand Miles West
+            team and highly recommend them to anyone looking to implement
+            a top-notch sales proposal platform. <br /><br />
+            Sincerely, <br />
+            <br />
+            Bill Wilson <br />
+            DwellTek LLC
+          </p>
         </div>
-      </div>
-      <div class="container-fluid row">
-        <div class="col-md-4">
-          <img src="/tmw/images/borderSolar.png" />
-          <p>Border Solar</p>
-        </div>
-        <div class="col-md-4">
-          <img src="/tmw/images/joule.png" />
-          <p>Joule Energy</p>
-        </div>
-        <div class="col-md-4">
-          <img src="/tmw/images/sunValleySolar.png" />
-          <p>sun valley solutions</p>
+        <div class="col-md-6">
+          <div class="clientContainer">
+            <img src="/tmw/images/borderSolar.png" />
+            <p>Border Solar</p>
+          </div>
+          <div class="clientContainer">
+            <img src="/tmw/images/joule.png" />
+            <p>Joule Energy</p>
+          </div>
+          <div class="clientContainer">
+            <img src="/tmw/images/sunValleySolar.png" />
+            <p>sun valley solutions</p>
+          </div>
         </div>
       </div>
     </div>
@@ -290,48 +324,52 @@
       <h3>Partners</h3>
       <div class="container-fluid row">
         <div class="col-md-6">
-          <img src="/tmw/images/box.png" />
-          <h4>Box</h4>
-          <p>Reinventing how the world uses business content
-            <br />
-            Box was founded on a simple, powerful idea: people should be
-            able to access and share their content from anywhere. Since 2005,
-            Box has helped more than 10 million individuals, small businesses
-            and Fortune 500 companies do just that. We want to reinvent what
-            businesses can do with their content through Box's content sharing
-            platform, made for a new kind of worker, a new kind of workplace
-            and a new kind of IT.
-          </p>
+          <div class="partnerContainer">
+            <img src="/tmw/images/box.png" />
+            <h4>Box</h4>
+            <p>Reinventing how the world uses business content
+              <br />
+              Box was founded on a simple, powerful idea: people should be
+              able to access and share their content from anywhere. Since 2005,
+              Box has helped more than 10 million individuals, small businesses
+              and Fortune 500 companies do just that. We want to reinvent what
+              businesses can do with their content through Box's content sharing
+              platform, made for a new kind of worker, a new kind of workplace
+              and a new kind of IT.
+            </p>
+          </div>
         </div>
         <div class="col-md-6">
-          <img src="/tmw/images/smartZip.png" />
-          <h4>Smartzip</h4>
-          <p>SmartZip Analytics, Inc. is the national leader in the emerging
-            field of predictive marketing for businesses of all kinds.
-            <br />
-            SmartZip's Predictive Marketing Platform is a breakthrough solution
-            that combines the power of predictive analytics with preemptive
-            marketing. This powerful solution is ideal for businesses that sell
-            to the home-real estate agents, solar providers, financial services
-            providers, high value home service providers, and many others.
-            These businesses use SmartZip to focus their efforts, accelerate
-            their leads and grow their market share.
-            <br />
-            As a venture-funded company, backed by Intel Capital, we have
-            assembled one of the most comprehensive predictive marketing
-            platforms. Our property-level database has hundreds of distinct
-            variables on over 80 million residential homes across 56,000 U.S.
-            neighborhoods.
-            <br />
-            Over 300 solar companies, lenders, and real estate professionals
-            rely on SmartZip to reach top prospects early and accelerate sales.
-            SmartZip predictive marketing solutions are deployed nationally by
-            industry segment and licensed to local and national market leaders
-            on a territory basis.
-            <br />
-            SmartZip is a privately held corporation, backed by Intel Capital
-            and headquartered in Pleasanton, CA.
-          </p>
+          <div class="partnerContainer">
+            <img src="/tmw/images/smartZip.png" />
+            <h4>Smartzip</h4>
+            <p>SmartZip Analytics, Inc. is the national leader in the emerging
+              field of predictive marketing for businesses of all kinds.
+              <br />
+              SmartZip's Predictive Marketing Platform is a breakthrough solution
+              that combines the power of predictive analytics with preemptive
+              marketing. This powerful solution is ideal for businesses that sell
+              to the home-real estate agents, solar providers, financial services
+              providers, high value home service providers, and many others.
+              These businesses use SmartZip to focus their efforts, accelerate
+              their leads and grow their market share.
+              <br />
+              As a venture-funded company, backed by Intel Capital, we have
+              assembled one of the most comprehensive predictive marketing
+              platforms. Our property-level database has hundreds of distinct
+              variables on over 80 million residential homes across 56,000 U.S.
+              neighborhoods.
+              <br />
+              Over 300 solar companies, lenders, and real estate professionals
+              rely on SmartZip to reach top prospects early and accelerate sales.
+              SmartZip predictive marketing solutions are deployed nationally by
+              industry segment and licensed to local and national market leaders
+              on a territory basis.
+              <br />
+              SmartZip is a privately held corporation, backed by Intel Capital
+              and headquartered in Pleasanton, CA.
+            </p>
+          </div>
         </div>
       </div>
     </div>
