--- a/index.html
+++ b/index.html
@@ -121,10 +121,12 @@
     <div id="services2" class="container-fluid">
       <!--services row1-->
       <div class="container-fluid row" id="row1">
-        <!-- 3x3 grid -->
+        <!-- 3x4 grid -->
         <div class="col-md-4">
           <div class="serviceContainer">
+
             <h5 class="sectionNumber">Customer Relationship Management</h5>
+
             <p>TMW offers custom CRM and project management tools
               designed and implemented across multiple platforms.
             </p>
@@ -379,7 +381,7 @@
     </div>
 
     <footer id="footer">
-      <p>&copy Thousand Miles West</p>
+      <p>&copy 2014 Thousand Miles West</p>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
