--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- Bootstrap, then css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/tmw/css/main.css">
-
+    <link rel="shortcut icon" type="image/png" href="/tmw/favicon.png">
+    
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
