--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/tmw/css/main.css">
     <link rel="shortcut icon" type="image/png" href="/tmw/favicon.png">
-    
+
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -31,7 +31,7 @@
               </button>
               <a class="navbar-brand" href="#">
                 <img src="/tmw/images/logo.png" height="100" width="145"
-                  style="margin-top: -10px; margin-left: -12px;">
+                  style="margin-top: -7px; margin-left: -10px;">
               </a>
             </div>
 
@@ -52,13 +52,7 @@
           </div><!-- /.container-fluid -->
         </nav>
         <!--carousel-->
-      <!--  <div class="container-fluid" id="carousel-container">-->
           <div id="myCarousel" class="carousel slide container-fluid" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-              <li data-target="#myCarousel" data-slide-to="1"></li>
-              <li data-target="#myCarousel" data-slide-to="2"></li>
-            </ol>
             <!--items-->
             <div class="carousel-inner container-fluid row">
               <div class="active item" style="height:400px">
@@ -201,7 +195,7 @@
         <div class="col-md-4">
           <div class="serviceContainer container-fluid">
             <h5 class="sectionNumber">System Design</h5>
-            <p>We can handle overflow solar system design work for submission
+            <p class="textFormat">We can handle overflow solar system design work for submission
               to your local jurisdictions.
             </p>
           </div>
