--- a/index.html
+++ b/index.html
@@ -55,42 +55,42 @@
           <div id="myCarousel" class="carousel slide container-fluid" data-ride="carousel">
             <!--items-->
             <div class="carousel-inner container-fluid row">
-              <div class="active item" style="height:400px">
+              <div class="active item container-fluid">
                 <div class="carousel">
                   <div class="container-fluid">
                     <img class="img-responsive slide" id="slide1" src="/tmw/images/slideshow/slide_1.jpg"  />
                   </div>
                 </div>
               </div>
-              <div class="item"  style="height:400px">
+              <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
                     <img class="img-responsive slide" src="/tmw/images/slideshow/slide_2.jpg" />
                   </div>
                 </div>
               </div>
-              <div class="item"  style="height:400px">
+              <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
                     <img class="img-responsive slide" src="/tmw/images/slideshow/slide_3.jpg" />
                   </div>
                 </div>
               </div>
-              <div class="item"  style="height:400px">
+              <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
                     <img class="img-responsive slide" src="/tmw/images/slideshow/slide_4.jpg" />
                   </div>
                 </div>
               </div>
-              <div class="item"  style="height:400px">
+              <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
                     <img class="img-responsive slide" src="/tmw/images/slideshow/slide_5.jpg" />
                   </div>
                 </div>
               </div>
-              <div class="item"  style="height:400px">
+              <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
                     <img class="img-responsive slide" src="/tmw/images/slideshow/slide_6.jpg" />
@@ -143,9 +143,7 @@
         <!-- 3x4 grid -->
         <div class="col-md-4">
           <div class="serviceContainer">
-
             <h5 class="sectionNumber">Customer Relationship Management</h5>
-
             <p class="textFormat">TMW offers custom CRM and project management tools
               designed and implemented across multiple platforms.
             </p>
