--- a/index.html
+++ b/index.html
@@ -143,32 +143,29 @@
         <!-- 3x4 grid -->
         <div class="col-md-4">
           <div class="serviceContainer">
-            <h5 class="sectionNumber">Customer Relationship Management</h5>
-            <p class="textFormat">TMW offers custom CRM and project management tools
-              designed and implemented across multiple platforms.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="serviceContainer container-fluid">
-            <h5 class="sectionNumber">Data Management</h5>
-            <p class="textFormat">Eighty percent of businesses affected by major data
-              loss close within 18 months - don't let your company
-              become a statistic. We will help you set up redundant
-              backups for your data and, if necessary, move your
-              information off of your internal file servers and to
-              more secure and easily accessible cloud storage options.
-            </p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="serviceContainer container-fluid">
             <h5 class="sectionNumber">Proposal Tool</h5>
             <p class="textFormat">We offer a proprietary sales proposal tool that has
               been tested and proven in markets across the US. Our
               tool is customized to your business when you sign up
               and hosted on our website so you and your customers can
               access it from anywhere.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">Financing</h5>
+            <p class="textFormat">Having a good financing or lease program is necessary in
+              today's market. We can work with our national partners to
+              help you offer your customers more options.
+            </p>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="serviceContainer container-fluid">
+            <h5 class="sectionNumber">Customer Relationship Management</h5>
+            <p class="textFormat">TMW offers custom CRM and project management tools
+              designed and implemented across multiple platforms.
             </p>
           </div>
         </div>
@@ -234,10 +231,13 @@
       <div class="container-fluid row" id="row4">
         <div class="col-md-4">
           <div class="serviceContainer container-fluid">
-            <h5 class="sectionNumber">Financing</h5>
-            <p class="textFormat">Having a good financing or lease program is necessary in
-              today's market. We can work with our national partners to
-              help you offer your customers more options.
+            <h5 class="sectionNumber">Data Management</h5>
+            <p class="textFormat">Eighty percent of businesses affected by major data
+              loss close within 18 months - don't let your company
+              become a statistic. We will help you set up redundant
+              backups for your data and, if necessary, move your
+              information off of your internal file servers and to
+              more secure and easily accessible cloud storage options.
             </p>
           </div>
         </div>
@@ -255,26 +255,28 @@
         </div>
         <div class="col-md-4" id="buttonContainer">
           <div id="bigButton">
+            <br />
+            <br />
             Get in Touch Today
           </div>
       </div>
     </div>
-    <div id="about" class="container-fluid">
+    <div id="about" class="container-fluid row">
       <h3>Who we Are</h3>
-      <div class="col-md-6">
-        <img src="/tmw/images/james.png" height="150" width="420"/>
-        <div class="aboutContainer">
-          <p class="textFormat">An Entrepreneur from UNM's Anderson School of Management and
-            former Director of Business Development at Consolidated Solar
-            Technologies. James has helped solar integrators around the
-            country discover and address their needs in an ever changing
-            solar economic climate.
+      <div class="col-md-6 container-fluid">
+        <img class="img-responsive" src="/tmw/images/james.png" />
+        <div class="aboutContainer container-fluid">
+          <p class="textFormat">An Entrepreneur from UNM's Anderson School
+            of Management and former Director of Business Development at
+            Consolidated Solar Technologies. James has helped solar integrators
+            around the country discover and address their needs in an ever
+            changing solar economic climate.
           </p>
         </div>
       </div>
-      <div class="col-md-6">
-        <img src="/tmw/images/nick.png" height="150" width="420" />
-        <div class="aboutContainer">
+      <div class="col-md-6 container-fluid">
+        <img class="img-responsive" src="/tmw/images/nick.png" />
+        <div class="aboutContainer container-fluid">
           <p class="textFormat">BA in Mass Communication - Advertising, Former Head of IT and
             Marketing Director for Consolidated Solar Technologies. Currently
             Partner at Thousand Miles West
