--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-    <div id="top-container"><!--TODO maybe change these ids-->
+  <body data-spy="scroll" data-target="#navbar" data-offset="60">
+    <div id="top-container">
       <div id="inner-container" class="container-fluid">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
           <div class="container-fluid">
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                <img src="/tmw/images/logo.png" height="100" width="145"
+                <img src="/tmw/images/logo.png" height="80" width="125"
                   style="margin-top: -20px; margin-left: -18px;">
               </a>
             </div>
@@ -285,9 +285,9 @@
     <div id="clients" class="container-fluid">
       <h3>Clients</h3>
       <div class="container-fluid row">
-        <div class="col-md-6 clientContainer alignLeft">
+        <div class="col-md-6 clientContainer">
           <img src="/tmw/images/dwelltech.png" />
-          <p>
+          <p class="alignLeft">
             <br />
             We retained the good folks at Thousand Miles West to build a
             solar proposal tool. The product they produced for us is truly
@@ -295,7 +295,7 @@
             mind when
             I think about our new tool:
           </p>
-          <ul>
+          <ul class="alignLeft">
             <li>Professional looking</li>
             <li>Simple for homeowners to understand</li>
             <li>Great sales tool</li>
@@ -310,7 +310,7 @@
               inverter types
             </li>
           </ul>
-          <p>
+          <p class="alignLeft"
             In a nutshell, this tool helps differentiate us from our
             competition and
             is a powerful selling tool.
@@ -346,7 +346,7 @@
           <div class="partnerContainer">
             <img src="/tmw/images/box.png" />
             <h4>Box</h4>
-            <p class="textFormat">Reinventing how the world uses business content
+            <p class="textFormat">Reinventing how the world uses business content.
               <br /><br />
               Box was founded on a simple, powerful idea: people should be
               able to access and share their content from anywhere. Since 2005,
