begin refactor css

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
               inverter types
             </li>
           </ul>
-          <p class="alignLeft"
+          <p class="alignLeft">
             In a nutshell, this tool helps differentiate us from our
             competition and
             is a powerful selling tool.
