--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       </div>
     </div>
     <!-- services-->
-    <div id="services" class="container-fluid">
+    <div id="services" class="container-fluid sectionContainer">
       <h3>What We Do</h3>
       <div class="textStyle" id="whatWeDo">
         <p class="textFormat">
@@ -135,7 +135,7 @@
         </p>
       </div>
     </div>
-    <div id="services2" class="container-fluid">
+    <div id="services2" class="container-fluid sectionContainer">
       <!--services row1-->
       <div class="container-fluid row" id="row1">
         <!-- 3x4 grid -->
@@ -259,7 +259,7 @@
           </div>
       </div>
     </div>
-    <div id="about" class="container-fluid row">
+    <div id="about" class="container-fluid row sectionContainer">
       <h3>Who we Are</h3>
       <div class="col-md-6 container-fluid">
         <img class="img-responsive" src="/tmw/images/james.png" />
@@ -282,7 +282,7 @@
         </div>
       </div>
     </div>
-    <div id="clients" class="container-fluid">
+    <div id="clients" class="container-fluid sectionContainer">
       <h3>Clients</h3>
       <div class="container-fluid row">
         <div class="col-md-6 clientContainer">
@@ -339,7 +339,7 @@
         </div>
       </div>
     </div>
-    <div id="partners" class="container-fluid">
+    <div id="partners" class="container-fluid sectionContainer">
       <h3>Partners</h3>
       <div class="container-fluid row">
         <div class="col-md-6">
@@ -392,11 +392,11 @@
         </div>
       </div>
     </div>
-    <div id="contact" class="container-fluid">
+    <div id="contact" class="container-fluid sectionContainer">
       <h3>Contact</h3>
       <p><a href="mailto: info@thousandmileswest.com">info@thousandmileswest.com</a></p>
     </div>
-    <footer id="footer">
+    <footer id="footer" class="sectionContainer">
       <p>&copy 2014 Thousand Miles West</p>
     </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
