ready for prod, paths changed

--- a/index1.html
+++ b/index1.html
@@ -8,8 +8,8 @@
 
     <!-- Bootstrap, then css -->
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
-    <link rel="shortcut icon" type="image/png" href="/favicon.png">
+    <link rel="stylesheet" type="text/css" href="/tmw/css/main.css">
+    <link rel="shortcut icon" type="image/png" href="/tmw/favicon.png">
 
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
               </button>
               <a class="navbar-brand" href="#">
-                <img src="/images/logo.png" height="80" width="125"
+                <img src="/tmw/images/logo.png" height="80" width="125"
                   style="margin-top: -20px; margin-left: -18px;">
               </a>
             </div>
@@ -57,42 +57,42 @@
               <div class="active item container-fluid">
                 <div class="carousel">
                   <div class="container-fluid">
-                    <img class="img-responsive slide" id="slide1" src="/images/slideshow/slide_1.jpg"  />
+                    <img class="img-responsive slide" id="slide1" src="/tmw/images/slideshow/slide_1.jpg"  />
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
-                    <img class="img-responsive slide" src="/images/slideshow/slide_2.jpg" />
+                    <img class="img-responsive slide" src="/tmw/images/slideshow/slide_2.jpg" />
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
-                    <img class="img-responsive slide" src="/images/slideshow/slide_3.jpg" />
+                    <img class="img-responsive slide" src="/tmw/images/slideshow/slide_3.jpg" />
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
-                    <img class="img-responsive slide" src="/images/slideshow/slide_4.jpg" />
+                    <img class="img-responsive slide" src="/tmw/images/slideshow/slide_4.jpg" />
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
-                    <img class="img-responsive slide" src="/images/slideshow/slide_5.jpg" />
+                    <img class="img-responsive slide" src="/tmw/images/slideshow/slide_5.jpg" />
                   </div>
                 </div>
               </div>
               <div class="item">
                 <div class="carousel">
                   <div class="container-fluid">
-                    <img class="img-responsive slide" src="/images/slideshow/slide_6.jpg" />
+                    <img class="img-responsive slide" src="/tmw/images/slideshow/slide_6.jpg" />
                   </div>
                 </div>
               </div>
@@ -262,7 +262,7 @@
     <div id="about" class="container-fluid row sectionContainer">
       <h3>Who we Are</h3>
       <div class="col-md-6 container-fluid">
-        <img class="img-responsive" src="/images/james.png" />
+        <img class="img-responsive" src="/tmw/images/james.png" />
         <div class="aboutContainer container-fluid">
           <p class="textFormat">An Entrepreneur from UNM's Anderson School
             of Management and former Director of Business Development at
@@ -273,7 +273,7 @@
         </div>
       </div>
       <div class="col-md-6 container-fluid">
-        <img class="img-responsive" src="/images/nick.png" />
+        <img class="img-responsive" src="/tmw/images/nick.png" />
         <div class="aboutContainer container-fluid">
           <p class="textFormat">BA in Mass Communication - Advertising, Former Head of IT and
             Marketing Director for Consolidated Solar Technologies. Currently
@@ -286,7 +286,7 @@
       <h3>Clients</h3>
       <div class="container-fluid row">
         <div class="col-md-6 clientContainer">
-          <img src="/images/dwelltech.png" />
+          <img src="/tmw/images/dwelltech.png" />
           <p class="alignLeft">
             <br />
             We retained the good folks at Thousand Miles West to build a
@@ -325,15 +325,15 @@
         </div>
         <div class="col-md-6">
           <div class="clientContainer">
-            <img src="/images/borderSolar.png" />
+            <img src="/tmw/images/borderSolar.png" />
             <p>Border Solar</p>
           </div>
           <div class="clientContainer">
-            <img src="/images/joule.png" />
+            <img src="/tmw/images/joule.png" />
             <p>Joule Energy</p>
           </div>
           <div class="clientContainer">
-            <img src="/images/sunValleySolar.png" />
+            <img src="/tmw/images/sunValleySolar.png" />
             <p>sun valley solutions</p>
           </div>
         </div>
@@ -344,7 +344,7 @@
       <div class="container-fluid row">
         <div class="col-md-6">
           <div class="partnerContainer">
-            <img src="/images/box.png" />
+            <img src="/tmw/images/box.png" />
             <h4>Box</h4>
             <p class="textFormat">Reinventing how the world uses business content.
               <br /><br />
@@ -360,7 +360,7 @@
         </div>
         <div class="col-md-6">
           <div class="partnerContainer">
-            <img src="/images/smartZip.png" />
+            <img src="/tmw/images/smartZip.png" />
             <h4>Smartzip</h4>
             <p class="textFormat">SmartZip Analytics, Inc. is the national leader in the emerging
               field of predictive marketing for businesses of all kinds.
@@ -404,6 +404,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 
-    <script src="/js/main.js"></script>
+    <script src="/tmw/js/main.js"></script>
   </body>
 </html>
