--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div id="bigButton">
             <br />
             <br />
-            Get in Touch Today
+              <a href="mailto:info@thousandmileswest.com" target="_top">Get in Touch Today</a>
           </div>
       </div>
     </div>
