added bw images and fixed text

--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           </div>
           <div class="clientContainer">
             <img src="/images/sunValleySolar.png" />
-            <p>sun valley solutions</p>
+            <p>Sun Valley Solutions</p>
           </div>
         </div>
       </div>
